[bugfix], component: carrot2.controller.carrot2-web Components page referred to no longer existing class causing compilation errors.
[new], component: carrot2.controller.carrot2-web Components page now has links to process details page, where one can see the script that drives the process.


git-svn-id: file:///home/dweiss/carrot2/migration/carrot2.svn/trunk@70 7ff1d41c-760d-0410-a7ff-a3a56f310b35